made sure it works on linux and added a high res photo to test

--- a/project1/index.html
+++ b/project1/index.html
@@ -4,9 +4,10 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>This is an h1</h1>
+		<h1>This is an HTML page to test for CS118 Project 1</h1>
+		<h2>This is an H2</h2>
 		<p>
-			oy!
+			Here is some text content. <strong>Bold content.</strong> <i>Itallic content.</i>
 		</p>
 	</body>
 </html>
